...
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                        style="@style/offer"
                        android:id="@+id/fragment_home_add_offer">

                    <TextView
                            android:text="@string/offer_add_one"
                            android:id="@+id/fragment_home_offer_title_add_offer_tv"
                            style="@style/offer.title"
                            app:layout_constraintStart_toStartOf="parent"
...
